# sem_debug

./: .gitignore  ARCHITECT_DEC.md  CODE.md  ICM_REFERENCE.md  KNOWN_LIMITATIONS.md  LICENSE  MVP_VET.md  NORTHSTAR.md  NORTHSTAR2.md  PHASE3_NS.md  PHASE4_NS.md  PHASE4_NS_REV.md  PLAN.md  PLAN_REV.md  README.md  RESEARCH.md  SHIPPING_PLAN.md  VET_REPORT_PHASE1.md  VET_REPORT_PHASE2.md  VET_REPORT_PHASE3.md  VET_REPORT_PHASE4.md  design_sketch_carryover.md  matcher.py  models.py  parser.py  pyproject.toml  sem_debug.py  tracer.py
docs/: KNOWN_LIMITATIONS.md
docs/northstar_refs/: 01_header_and_overview.md  02_phase1_and_phase2.md  03_phase3_and_phase4.md
sem_debug/: cli.py  matcher.py  models.py  parser.py  reporter.py  tracer.py  workspace_parser.py
tests/: conftest.py  test_calibration_sections.py  test_cli.py  test_json_contract.py  test_json_output.py  test_matcher.py  test_matcher_calibration.py  test_models.py  test_parser.py  test_parser_sections.py  test_reporter.py  test_tracer.py  test_tracer_context.py  test_workspace_parser.py
tests/fixtures/: header_only.md  input_source_alpha.md  input_source_beta.md  output_clean.md  output_draft.md  output_unrelated.md  single_para.md  with_code.md  with_headers.md
tests/fixtures/context_workspace/: 01_intro.md  02_data.md  CONTEXT.md  output_drift.md  output_full.md
