[project]
name = "sem_debug"
version = "0.1.0"
description = "Attribution tool for output passages against input sources"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn",
]

[project.scripts]
sem_debug = "sem_debug.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sem_debug"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
